style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --bg-red-main: rgb(223, 55, 41);
  --inner-light: rgb(237, 231, 244);
  --outer-light: rgb(111, 177, 218);
  --red-light: rgb(254, 110, 81);
  --red-med: rgb(242, 73, 48);
  --pokemon-blue: rgb(53, 95, 160);
  --pokemon-yellow: rgb(233, 189, 49);
}

body {
  font-family: 'Staatliches', sans-serif, cursive;
  background: rgb(232, 185, 182);
  background: radial-gradient(
    circle,
    rgba(232, 185, 182, 1) 0%,
    rgba(223, 55, 41, 1) 100%
  );
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10vh;
}

.whos-that-logo {
  width: 200px;
  transform: translateY(50px);
}

/* MAIN CONTENT */

main {
  height: 75vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pokemon-spinning-background {
  width: 300px;
  height: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pokemon-bg-outer {
  width: 200px;
  height: 200px;
  background: var(--outer-light);
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  animation: spin 4s infinite linear;
}
.pokemon-bg-outer:before,
.pokemon-bg-outer:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 200px;
  width: 200px;
  background: var(--outer-light);
}
.pokemon-bg-outer:before {
  transform: rotate(30deg);
}
.pokemon-bg-outer:after {
  transform: rotate(60deg);
}

.pokemon-bg-inner {
  width: 150px;
  height: 150px;
  background: var(--inner-light);
  position: relative;
  z-index: 1;
  animation: spin-backwards 2s infinite linear;
}
.pokemon-bg-inner:before,
.pokemon-bg-inner:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 150px;
  width: 150px;
  background: var(--inner-light);
}
.pokemon-bg-inner:before {
  transform: rotate(30deg);
}
.pokemon-bg-inner:after {
  transform: rotate(60deg);
}

.pokemon-container {
  width: 250px;
  height: 250px;
  position: absolute;
  z-index: 5;
  display: flex;
}
.cover {
  filter: drop-shadow(10px 10px 10px black) invert(50%);
}

.current-pokemon {
  border: 1px solid gold;
}

/* MODALS */

.game-start-modal,
.modal-you-lose,
.modal-you-win {
  position: absolute;
  width: 80%;
  height: 50%;
  background: rgb(101, 145, 212);
  background: radial-gradient(
    circle,
    rgba(101, 145, 212, 1) 0%,
    rgba(53, 95, 160, 1) 100%
  );
  z-index: 2;
  border: 2px solid var(--pokemon-yellow);
  border-radius: 5%;
  box-shadow: 2px 2px 5px rgb(34, 62, 104);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.how-to-play,
.you-lose-h2,
.you-win-h2 {
  color: var(--pokemon-yellow);
  text-shadow: 2px 2px 2px rgb(31, 58, 99);
  font-size: 2em;
}

.game-rules,
.lose-message,
.correct-answer-p,
.win-message {
  color: var(--pokemon-yellow);
  font-size: 1.5em;
  text-shadow: 2px 2px 2px rgb(31, 58, 99);
  width: 75%;
}

.btn-play {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5% 0;
}
.btn-play img {
  width: 70%;
  transition: 0.2s;
}
.btn-play img:hover {
  transform: scale(1.1);
  cursor: pointer;
}

.btn-play-again {
  width: 10em;
  display: flex;
  flex-direction: column;
  transition: 0.2s;
}
.btn-play-again:hover {
  transform: scale(1.1);
  cursor: pointer;
}

.modal-wrong-x {
  position: absolute;
  z-index: 6;
  display: flex;
}

.countdown-container {
  position: absolute;
  z-index: 4;
}
.countdown-container img {
  animation: zoom-out 0.25s linear;
}

.input-container {
  position: absolute;
  align-self: flex-end;
  width: 60vw;
  height: 7vh;
  margin-bottom: 3%;
  display: flex;
  align-items: center;
}

#user-input {
  width: 100%;
  height: 100%;
  font-size: 2em;
  font-family: 'Staatliches', sans-serif, cursive;
  text-align: center;
  color: var(--pokemon-yellow);
  background: rgba(1, 1, 1, 0.5);
  text-shadow: 2px 2px 2px rgb(31, 58, 99);
}

.pokeball-load-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  z-index: 5;
  width: 3em;
  animation: spin 1s infinite linear;
}
.pokeball-load-container img {
  width: 100%;
}

/* SCORES AND FOOTER */

.score {
  height: 15vh;
  background: rgb(254, 110, 81);
  box-shadow: 2px -2px 20px black;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.score p {
  color: rgb(233, 189, 49);
  text-shadow: 2px 2px rgb(58, 99, 167);
  font-size: 1.5em;
}

.point-value {
  position: absolute;
  z-index: 4;
  align-self: flex-start;
  top: 0;
  right: 0;
  animation-name: add-point;
  animation-duration: 0.5s;
}

.x {
  animation-name: zoom-out;
  animation-duration: 0.2s;
  animation-timing-function: linear;
}

/* ANIMATIONS */

@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes spin-backwards {
  100% {
    transform: rotate(-360deg);
  }
}

@keyframes zoom-out {
  0% {
    transform: scale(2);
    opacity: 0.5;
  }

  25% {
    transform: scale(1.5);
    opacity: 0.75;
  }

  75% {
    transform: scale(1);
    opacity: 1.25;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes add-point {
  0% {
    opacity: 0.5;
    transform: translateY(10px);
  }
  50% {
    opacity: 1;
    transform: translateY(5px);
  }
  100% {
    opacity: 0;
  }
}

/* EXTRA CLASSES */

.hidden {
  display: none;
}

